Fix quicksearch field appereanc on iOS Safari.

--- a/app/assets/stylesheets/hitobito/_layout.scss
+++ b/app/assets/stylesheets/hitobito/_layout.scss
@@ -218,6 +218,7 @@ body {
   flex-wrap: nowrap;
   .quicksearch-input {
     flex: 1 0 auto;
+    -webkit-appearance: none;
   }
 }
 
